--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-tailwind/react": "^2.1.10",
     "jspdf": "^4.0.0",
     "next": "16.1.1",
+    "pdfjs-dist": "^5.4.296",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-modal": "^3.16.3",
+    "react-pdf": "^10.3.0",
     "react-sortablejs": "^6.1.4"
   },
   "devDependencies": {
